--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -1557,6 +1557,10 @@ select {
   margin-right: 0px;
 }
 
+.mt-20 {
+  margin-top: 5rem;
+}
+
 .block {
   display: block;
 }
@@ -2517,6 +2521,11 @@ select {
   color: rgb(209 213 219 / var(--tw-text-opacity));
 }
 
+.text-orange-300 {
+  --tw-text-opacity: 1;
+  color: rgb(253 186 140 / var(--tw-text-opacity));
+}
+
 .text-blueGray-500 {
   --tw-text-opacity: 1;
   color: rgb(100 116 139 / var(--tw-text-opacity));
@@ -2595,6 +2604,11 @@ select {
 .text-blueGray-300 {
   --tw-text-opacity: 1;
   color: rgb(203 213 225 / var(--tw-text-opacity));
+}
+
+.underline {
+  -webkit-text-decoration-line: underline;
+          text-decoration-line: underline;
 }
 
 .no-underline {
@@ -2994,10 +3008,6 @@ select {
 
   .md\:bottom-0 {
     bottom: 0px;
-  }
-
-  .md\:float-right {
-    float: right;
   }
 
   .md\:mt-20 {
