--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -1665,6 +1665,10 @@ select {
   max-height: 600px;
 }
 
+.max-h-\[800px\] {
+  max-height: 800px;
+}
+
 .min-h-screen-75 {
   min-height: 75vh;
 }
@@ -1747,6 +1751,10 @@ select {
 
 .max-w-\[800px\] {
   max-width: 800px;
+}
+
+.max-w-\[1000px\] {
+  max-width: 1000px;
 }
 
 .flex-auto {
