--- a/styles/index.css
+++ b/styles/index.css
@@ -27,4 +27,8 @@
       padding-top: 10rem;
       padding-bottom: 10rem;
     }
+    .center-image {
+      margin-left: auto;
+      margin-right: auto;
+    }
   }
