--- a/styles/index.css
+++ b/styles/index.css
@@ -6,6 +6,22 @@
 
 @layer components {
      /* custom css classes example. Here we write custom css classes */
+     .btn-primary-indigo {
+      @apply inline-flex text-white bg-indigo-500 border-0 py-1 px-3 focus:outline-none hover:bg-indigo-600 rounded text-lg
+    }
+    .btn-primary-gray {
+      @apply inline-flex text-white bg-gray-500 border-0 py-1 px-3 focus:outline-none hover:bg-gray-600 rounded text-lg
+    }
+
+    .btn-primary-gray-big {
+      @apply text-white bg-gray-700  hover:bg-gray-800 focus:ring-4 focus:outline-none focus:ring-gray-300 font-medium rounded-lg text-base px-6 py-3.5 text-center dark:bg-gray-600 dark:hover:bg-gray-700 dark:focus:ring-gray-800
+    }
+    .btn-primary-indigo-big {
+      @apply text-white bg-indigo-700  hover:bg-indigo-800 focus:ring-4 focus:outline-none focus:ring-indigo-300 font-medium rounded-lg text-base px-6 py-3.5 text-center dark:bg-indigo-600 dark:hover:bg-indigo-700 dark:focus:ring-indigo-800
+    }
+
+
+
     .red-btn {
      background-color:#FF0000;
     }
