--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -3206,6 +3206,11 @@ select {
     margin-bottom: 2rem;
   }
 
+  .lg\:my-4 {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+  }
+
   .lg\:mb-0 {
     margin-bottom: 0px;
   }
